ADD - Pantalla para agregar ingresos en la cuenta

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.EldarWallet"
         tools:targetApi="31">
         <activity
+            android:name=".ui.view.AddBalanceActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.view.CardFormActivity"
             android:exported="false" />
         <activity
